SERVER-73848 update config.tags inside writeDecisionPersistedState