src/mongo/db/s/resharding/resharding_coordinator_test.cpp
@@ -692,7 +692,7 @@ protected:
                                               ReshardingCoordinatorDocument expectedCoordinatorDoc,
                                               std::vector<ChunkType> expectedChunks,
                                               std::vector<TagsType> expectedZones) {
-        cleanupSourceConfigCollections(opCtx, expectedCoordinatorDoc);
+        removeChunkDocs(opCtx, expectedCoordinatorDoc.getSourceUUID());
         // Check that chunks and tags entries previously under the temporary namespace have been
         // correctly updated to the original namespace
 
